--- a/src/configs/config.yml
+++ b/src/configs/config.yml
@@ -1,6 +1,7 @@
 app_name: VirtualLibrary
 environment: development
 debug: true
+rich_logging: true
 base_llm: openai
 openai_model: gpt-3.5-turbo
 anthropic_model: claude-3-opus
