--- a/src/configs/config.yml
+++ b/src/configs/config.yml
@@ -1,6 +1,6 @@
 app_name: VirtualLibrary
 environment: development
-debug: true
+debug: false
 rich_logging: true
 base_llm: openai
 openai_model: gpt-3.5-turbo
@@ -10,7 +10,7 @@ projects:
   - SD
   - RA
 include_whole_api_body: false
-langchain_debug: false
-conversation_memory: false
+langchain_debug: true
+conversation_memory: true
 max_questions_to_remember: 3
 strip_unused_jira_data: true
