--- a/src/configs/config.yml
+++ b/src/configs/config.yml
@@ -15,3 +15,4 @@ conversation_memory: true
 max_questions_to_remember: 3
 strip_unused_jira_data: true
 follow_related_jiras: true
+validation_prompts_dir: validation
