--- a/src/configs/config.yml
+++ b/src/configs/config.yml
@@ -17,3 +17,4 @@ strip_unused_jira_data: true
 follow_related_jiras: true
 validation_prompts_dir: validation
 write_comments_to_jira: false
+ask_for_confirmation: false
