--- a/src/configs/config.yml
+++ b/src/configs/config.yml
@@ -16,5 +16,5 @@ max_questions_to_remember: 3
 strip_unused_jira_data: true
 follow_related_jiras: true
 validation_prompts_dir: validation
-write_comments_to_jira: false
+write_comments_to_jira: true
 ask_for_confirmation: false
